--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Brett's Website</h1>
-    <img src="images/Golfer.jpg" alt="Brett playing golf" width = "500" height = "700"/>
+    <img src="images/Golfer.JPG" alt="Brett playing golf" width = "500" height = "700"/>
 
     <p>Hi everyone! My name is Brett Netkin. You'll find some of my interests below:</p>
 
@@ -24,7 +24,7 @@
         golf, as it is my goal to play in the 2025 U.S. Open Qualifier. I also enjoy spending time with family as much as possible.
     </p>
     
-    <p>Below, you'll find some thing I'd like to include on my website later on:</p>
+    <p>Below, you'll find some things I'd like to include on my website later on:</p>
       <ul> 
         <li>More interactive buttons</li>
         <li>A market tracker</li>
